// Vitest Snapshot v1

exports[`generate component name > [...all].vue 1`] = `
"const e = \`<script>
import { defineComponent } from 'vue'
export default /*#__PURE__*/ defineComponent({
  name: 'all'
})
<\\\\/script>
<template>
  <div>...all route</div>
</template>
\`;
export {
  e as default
};
"
`;

exports[`generate component name > [sensor].vue 1`] = `
"const e = \`<template>
  nested dynamic view:
  <router-view />
</template>
\`;
export {
  e as default
};
"
`;

exports[`generate component name > [sensor]/current.vue 1`] = `
"const e = \`<template>
  <p>/[sensor]/current.vue</p>
</template>
\`;
export {
  e as default
};
"
`;

exports[`generate component name > __test__/index.vue 1`] = `
"const e = \`<template>
  test default exclude
</template>
\`;
export {
  e as default
};
"
`;

exports[`generate component name > about.vue 1`] = `
"const e = \`<template>
  <div>
    nested about view:
    <router-view />
  </div>
</template>

<route lang=\\"yml\\">
meta:
  lang: yml
</route>
\`;
export {
  e as default
};
"
`;

exports[`generate component name > about/[id].vue 1`] = `
"const e = \`<script setup lang=\\"ts\\">
defineProps({
  id: String,
})
<\\\\/script>

<template>
  <div>
    <div>
      about/[id].vue: {{ id }}
    </div>
    <router-link to=\\"/about/1b234bk12b3/more\\">
      more deep
    </router-link>
    <router-view />
  </div>
</template>

<route>
{
  name: 'about-user-id',
  meta: {
    requiresAuth: true,
  },
}
</route>
\`;
export {
  e as default
};
"
`;

exports[`generate component name > about/[id]/more.vue 1`] = `
"const e = \`<template>
  <div class=\\"deep-more\\">
    deep nested: about/[id]/more.vue
  </div>
</template>
\`;
export {
  e as default
};
"
`;

exports[`generate component name > about/[id]/nested.vue 1`] = `
"const e = \`<template>
  <div class=\\"deep-nested\\">
    deep nested: about/[id]/nested.vue
  </div>
</template>
\`;
export {
  e as default
};
"
`;

exports[`generate component name > about/index.vue 1`] = `
"const t = \`<template>
  <div>
    about/index.vue
    <router-link to=\\"/about/1b234bk12b3\\">
      id: 1b234bk12b3
    </router-link>
  </div>
</template>
\`;
export {
  t as default
};
"
`;

exports[`generate component name > blog/[id].vue 1`] = `
"const e = \`<script setup lang=\\"tsx\\">
defineProps({
  id: String,
})
<\\\\/script>

<template>
  <div>
    <p>blog/[id].vue: {{ id }}</p>
    <p>
      {{ $route }}
    </p>
  </div>
</template>

<route>
{
  \\"name\\": \\"blog-id\\",
  \\"meta\\":{
    \\"requiresAuth\\": false
  }
}
</route>
\`;
export {
  e as default
};
"
`;

exports[`generate component name > blog/index.vue 1`] = `
"const o = \`<template>
  <div>
    blog/index.vue
    <router-link to=\\"/blog/1b234bk12b3\\">
      id: 1b234bk12b3
    </router-link> |
    <router-link to=\\"/blog/today\\">
      today
    </router-link> |
    <router-link to=\\"/blog/today/xxx\\">
      child - not found
    </router-link>
  </div>
</template>
\`;
export {
  o as default
};
"
`;

exports[`generate component name > blog/today/[...all].vue 1`] = `
"const t = \`<template>
  <div>blog/today ...all route</div>
</template>
\`;
export {
  t as default
};
"
`;

exports[`generate component name > blog/today/index.vue 1`] = `
"const e = \`<template>
  <div>
    blog/today/index.vue
  </div>
</template>
\`;
export {
  e as default
};
"
`;

exports[`generate component name > components.vue 1`] = `
"const e = \`<template>
  <h1>Test Components name</h1>
</template>

<route lang=\\"yaml\\">
meta:
  lang: yaml
</route>
\`;
export {
  e as default
};
"
`;

exports[`generate component name > index.vue 1`] = `
"const r = \`<template>
  <div>
    <p>index.vue</p>
    <router-link to=\\"/blog\\">
      blog
    </router-link> |
    <router-link to=\\"/about\\">
      about
    </router-link> |
    <router-link to=\\"/components\\">
      components
    </router-link> |
    <router-link to=\\"/markdown\\">
      markdown
    </router-link> |
    <router-link to=\\"/xxx/xxx\\">
      not exists
    </router-link> |
    <router-link to=\\"/features/dashboard\\">
      features:dashboard
    </router-link> |
    <router-link to=\\"/features/admin\\">
      features:admin
    </router-link> |
    <router-link to=\\"/admin\\">
      admin
    </router-link>
  </div>
</template>

<route lang=\\"json\\">
{
  \\"meta\\": {
    \\"requiresAuth\\": false
  }
}
</route>
\`;
export {
  r as default
};
"
`;

exports[`generate component name > typed-router.d.ts 1`] = `
"const t = \\"\\";
export {
  t as default
};
"
`;
